# qa-auto-engineer-python-project-241

./: .gitignore  Makefile  README.md  pyproject.toml
.github/workflows/: pyci.yml  sonarqube.yml
gendiff/: __init__.py  diff_tree.py  generate_diff.py  main.py
gendiff/formatters/: json.py  plain.py  stylish.py
gendiff/parsers/: __init__.py  json.py  yaml.py
gendiff/tests/: test_diff.py  test_generate_diff.py
